Alterado nome hardcode para variável.

--- a/ant/build.properties
+++ b/ant/build.properties
@@ -7,7 +7,7 @@ src.dir=src
 test.dir=test
 web.dir=WebContent
 
-dist.app.dir=${dist.dir}/vraptor-starting-project
+dist.app.dir=${dist.dir}/${app.name}
 dist.css.dir=${dist.app.dir}/css
 dist.js.dir=${dist.app.dir}/js
 dist.test.dir=${dist.dir}/test
