--- a/test/hibernate.properties
+++ b/test/hibernate.properties
@@ -1,8 +1,13 @@
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
+## MySQL
+#hibernate.connection.driver_class=com.mysql.jdbc.Driver
+#hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/starting
+#hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+
+## HSQL
+hibernate.connection.driver_class=org.hsqldb.jdbcDriver
+hibernate.connection.url=jdbc:hsqldb:mem:starting_test
+
 hibernate.connection.username=root
 hibernate.connection.password=root
-hibernate.connection.url=jdbc:hsqldb:mem:starting_test
 hibernate.hbm2ddl.auto=update
 hibernate.validator.apply_to_ddl=true
-hibernate.show_sql=false
-hibernate.format_sql=false
