Alterado o nome da pasta de resultado do build para target para ficar meio padrão. Abandonei o result do NetBeans. :P

--- a/ant/build.xml
+++ b/ant/build.xml
@@ -22,8 +22,8 @@
 
 	<target name="clean">
 		<echo>Cleaning...</echo>
-		<delete dir="${dist.app.dir}" />
-		<delete dir="${dist.test.dir}" />
+		<delete dir="${target.app.dir}" />
+		<delete dir="${target.test.dir}" />
 		<delete dir="${instrumented.dir}" />
 		<delete dir="${coverage.dir}" />
 		<delete dir="${report.dir}/xml" />
@@ -32,8 +32,8 @@
 
 	<target name="make" depends="clean">
 		<echo>Creating directories...</echo>
-		<mkdir dir="${dist.app.dir}" />
-		<mkdir dir="${dist.test.dir}" />
+		<mkdir dir="${target.app.dir}" />
+		<mkdir dir="${target.test.dir}" />
 		<mkdir dir="${instrumented.dir}" />
 		<mkdir dir="${coverage.dir}" />
 		<mkdir dir="${report.dir}/xml" />
@@ -42,7 +42,7 @@
 
 	<target name="copy" depends="make">
 		<echo>Copying root...</echo>
-		<copy todir="${dist.app.dir}">
+		<copy todir="${target.app.dir}">
 			<fileset dir="${app.root}">
 				<include name="*.html" />
 				<include name="*.xml" />
@@ -50,69 +50,69 @@
 		</copy>
 
 		<echo>Copying webcontent...</echo>
-		<copy todir="${dist.app.dir}">
+		<copy todir="${target.app.dir}">
 			<fileset dir="${web.dir}" />
 		</copy>
 
 		<echo>Copying src...</echo>
-		<copy todir="${dist.classes.dir}">
+		<copy todir="${target.classes.dir}">
 			<fileset dir="${src.dir}" excludes="**/*.java" />
 		</copy>
 
 		<echo>Copying test...</echo>
-		<copy todir="${dist.test.dir}">
+		<copy todir="${target.test.dir}">
 			<fileset dir="${test.dir}" excludes="**/*.java" />
 		</copy>
 	</target>
 
 	<target name="minify" depends="copy">
 		<echo>Compressing JS...</echo>
-		<concat destfile="${dist.js.dir}/javascript.temp.js" fixlastline="true">
-			<fileset dir="${dist.js.dir}" includes="*.js" />
+		<concat destfile="${target.js.dir}/javascript.temp.js" fixlastline="true">
+			<fileset dir="${target.js.dir}" includes="*.js" />
 		</concat>
 
 		<java jar="${yuicompressor.jar}" fork="true">
-			<arg value="${dist.js.dir}/javascript.temp.js" />
+			<arg value="${target.js.dir}/javascript.temp.js" />
 			<arg value="-o" />
-			<arg value="${dist.js.dir}/javascript.js" />
+			<arg value="${target.js.dir}/javascript.js" />
 		</java>
 
-		<delete dir="${dist.js.dir}" excludes="javascript.js" />
+		<delete dir="${target.js.dir}" excludes="javascript.js" />
 
 		<echo>Compressing CSS...</echo>
-		<concat destfile="${dist.css.dir}/stylesheet.css" fixlastline="true">
-			<fileset dir="${dist.css.dir}" includes="*.css" excludes="stylesheet.css" />
+		<concat destfile="${target.css.dir}/stylesheet.css" fixlastline="true">
+			<fileset dir="${target.css.dir}" includes="*.css" excludes="stylesheet.css" />
 		</concat>
 
 		<java jar="${yuicompressor.jar}" fork="true">
-			<arg value="${dist.css.dir}/stylesheet.css" />
+			<arg value="${target.css.dir}/stylesheet.css" />
 			<arg value="-o" />
-			<arg value="${dist.css.dir}/stylesheet.css" />
+			<arg value="${target.css.dir}/stylesheet.css" />
 		</java>
 
-		<delete dir="${dist.css.dir}" excludes="stylesheet.css" />
+		<delete dir="${target.css.dir}" excludes="stylesheet.css" />
 	</target>
 
 	<target name="rename" depends="minify">
 		<echo>Renaming hibernate.properties...</echo>
-		<delete file="${dist.classes.dir}/hibernate.properties" />
-		<copy file="${dist.classes.dir}/hibernate-production.properties" tofile="${dist.classes.dir}/hibernate.properties" />
-		<delete file="${dist.classes.dir}/hibernate-production.properties" />
+		<delete file="${target.classes.dir}/hibernate.properties" />
+		<copy file="${target.classes.dir}/hibernate-production.properties" tofile="${target.classes.dir}/hibernate.properties" />
+		<delete file="${target.classes.dir}/hibernate-production.properties" />
 
 		<echo>Renaming log4j.properties...</echo>
-		<delete file="${dist.classes.dir}/log4j.properties" />
-		<copy file="${dist.classes.dir}/log4j-production.properties" tofile="${dist.classes.dir}/log4j.properties" />
-		<delete file="${dist.classes.dir}/log4j-production.properties" />
+		<delete file="${target.classes.dir}/log4j.properties" />
+		<copy file="${target.classes.dir}/log4j-production.properties" tofile="${target.classes.dir}/log4j.properties" />
+		<delete file="${target.classes.dir}/log4j-production.properties" />
 
 		<echo>Renaming decorators...</echo>
-		<delete file="${dist.webinf.dir}/decorator/main.jsp" />
-		<copy file="${dist.webinf.dir}/decorator/main-production.jsp" tofile="${dist.webinf.dir}/decorator/main.jsp" />
-		<delete file="${dist.webinf.dir}/decorator/main-production.jsp" />
+		<delete file="${target.webinf.dir}/decorator/main.jsp" />
+		<copy file="${target.webinf.dir}/decorator/main-production.jsp" tofile="${target.webinf.dir}/decorator/main.jsp" />
+		<delete file="${target.webinf.dir}/decorator/main-production.jsp" />
 	</target>
 
 	<target name="compile" depends="rename">
 		<echo>Compiling classes...</echo>
-		<javac destdir="${dist.classes.dir}" srcdir="${src.dir}" debug="true"
+		<javac destdir="${target.classes.dir}" srcdir="${src.dir}" debug="true"
 				debuglevel="vars,lines,source" source="1.6" target="1.6">
 			<classpath>
 				<path refid="lib.path" />
@@ -121,12 +121,12 @@
 		</javac>
 
 		<echo>Compiling test classes...</echo>
-		<javac destdir="${dist.test.dir}" srcdir="${test.dir}" debug="true"
+		<javac destdir="${target.test.dir}" srcdir="${test.dir}" debug="true"
 				debuglevel="vars,lines,source" source="1.6" target="1.6">
 			<classpath>
 				<path refid="lib.path" />
 				<path refid="build.path" />
-				<pathelement path="${dist.classes.dir}" />
+				<pathelement path="${target.classes.dir}" />
 			</classpath>
 		</javac>
 	</target>
@@ -138,7 +138,7 @@
 		<cobertura-instrument datafile="${coverage.dir}/cobertura.ser" todir="${instrumented.dir}">
 			<ignore regex="org.apache.log4j.*" />
 
-		    <fileset dir="${dist.classes.dir}">
+		    <fileset dir="${target.classes.dir}">
 		        <include name="**/*.class"/>
 		    </fileset>
 		</cobertura-instrument>
@@ -161,14 +161,14 @@
 				</fileset>
 
 				<pathelement path="${instrument.dir}" />
-				<pathelement path="${dist.classes.dir}" />
-				<pathelement path="${dist.test.dir}" />
+				<pathelement path="${target.classes.dir}" />
+				<pathelement path="${target.test.dir}" />
 			</classpath>
 
 			<test name="${testcase}" todir="${report.dir}" if="testcase" />
 
 			<batchtest todir="${report.dir}/xml" unless="testcase">
-				<fileset dir="${dist.test.dir}">
+				<fileset dir="${target.test.dir}">
 					<include name="**/**Test.class" />
 				</fileset>
 			</batchtest>
@@ -192,16 +192,16 @@
 
 	<echo>Creating war...</echo>
 	<target name="war" depends="report-junit">
-		<war destfile="${war.file}" webxml="${dist.webinf.dir}/web.xml">
-			<zipfileset dir="${dist.app.dir}" />
+		<war destfile="${war.file}" webxml="${target.webinf.dir}/web.xml">
+			<zipfileset dir="${target.app.dir}" />
 		</war>
 	</target>
 
 	<echo>Removing temp folders...</echo>
 	<target name="all" depends="war">
 		<delete dir="${instrumented.dir}" />
-		<delete dir="${dist.test.dir}" />
-		<delete dir="${dist.app.dir}" />
+		<delete dir="${target.test.dir}" />
+		<delete dir="${target.app.dir}" />
 	</target>
 
 	<echo>Checking coverage...</echo>
