--- a/ant/build.properties
+++ b/ant/build.properties
@@ -1,27 +1,27 @@
 app.root=.
 app.name=vraptor-starting-project
 
-dist.dir=dist
+target.dir=target
 lib.dir=lib
 src.dir=src
 test.dir=test
 web.dir=WebContent
 
-dist.app.dir=${dist.dir}/${app.name}
-dist.css.dir=${dist.app.dir}/css
-dist.js.dir=${dist.app.dir}/js
-dist.test.dir=${dist.dir}/test
+target.app.dir=${target.dir}/${app.name}
+target.css.dir=${target.app.dir}/css
+target.js.dir=${target.app.dir}/js
+target.test.dir=${target.dir}/test
 
-dist.webinf.dir=${dist.app.dir}/WEB-INF
-dist.classes.dir=${dist.webinf.dir}/classes
-dist.meta.dir=${dist.classes.dir}/META-INF
+target.webinf.dir=${target.app.dir}/WEB-INF
+target.classes.dir=${target.webinf.dir}/classes
+target.meta.dir=${target.classes.dir}/META-INF
 
 coverage.app.dir=${lib.dir}/test/cobertura-1.9.4.1
-coverage.dir=${dist.dir}/coverage
-instrumented.dir=${dist.dir}/instrumented
-report.dir=${dist.dir}/report
+coverage.dir=${target.dir}/coverage
+instrumented.dir=${target.dir}/instrumented
+report.dir=${target.dir}/report
 
 yuicompressor.jar=${lib.dir}/build/yuicompressor-2.4.2.jar
 
-war.dir=${dist.dir}/war
+war.dir=${target.dir}/war
 war.file=${war.dir}/${app.name}.war
