--- a/test/hibernate.properties
+++ b/test/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=org.hsqldb.jdbcDriver
-hibernate.connection.url=jdbc:hsqldb:mem:starting_test
+hibernate.connection.url=jdbc:hsqldb:mem:test
 
 hibernate.connection.username=root
 hibernate.connection.password=root
