--- a/src/hibernate.properties
+++ b/src/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/starting
+hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/test
 hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
 hibernate.connection.username=root
