Logging on file while in production.

--- a/src/log4j-production.properties
+++ b/src/log4j-production.properties
@@ -1,14 +1,19 @@
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} %5p [%-20c{1}] %m%n
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss} %-5p [%-30c{1}] %m%n
 
 # DEBUG INFO WARN ERROR FATAL
-log4j.rootCategory=ERROR, stdout
+log4j.rootCategory=WARN, file
 
-log4j.logger.br.com.caelum.vraptor=ERROR
-log4j.logger.com.mchange=ERROR
-log4j.logger.com.thoughtworks=ERROR
-log4j.logger.org.springframework=ERROR
-log4j.logger.org.hibernate=ERROR
-log4j.logger.org.hibernate.validator=ERROR
-log4j.logger.org.vraptor=ERROR
+log4j.logger.br.com.caelum.vraptor=, file
+log4j.logger.com.mchange=, file
+log4j.logger.com.thoughtworks=, file
+log4j.logger.org.springframework=, file
+log4j.logger.org.hibernate=, file
+log4j.logger.org.hibernate.validator=, file
+log4j.logger.org.vraptor=, file
+log4j.logger.com.jintegrity=, file
+
+log4j.appender.file.File=/home/your-user/starting.log
+log4j.appender.file.MaxBackupIndex=2
+log4j.appender.file.MaxFileSize=1MB
