--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -12,3 +12,4 @@ log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
 log4j.logger.org.hibernate.validator=INFO
 log4j.logger.org.vraptor=INFO
+log4j.logger.com.jintegrity=INFO
